@@ -1192,6 +1192,129 @@ name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|assertTrue
+argument_list|(
+name|record
+operator|.
+name|containsKey
+argument_list|(
+literal|"subject"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|record
+operator|.
+name|containsKey
+argument_list|(
+literal|"test"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|record
+operator|.
+name|containsKey
+argument_list|(
+literal|"marks"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|streamer
+operator|=
+name|JsonRecordReader
+operator|.
+name|getInst
+argument_list|(
+literal|"/exams"
+argument_list|,
+name|Collections
+operator|.
+name|singletonList
+argument_list|(
+literal|"$FQN:/**"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|records
+operator|=
+name|streamer
+operator|.
+name|getAllRecords
+argument_list|(
+operator|new
+name|StringReader
+argument_list|(
+name|json
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|records
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|record
+range|:
+name|records
+control|)
+block|{
+name|assertEquals
+argument_list|(
+literal|6
+argument_list|,
+name|record
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|record
+operator|.
+name|containsKey
+argument_list|(
+literal|"exams.subject"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|record
+operator|.
+name|containsKey
+argument_list|(
+literal|"exams.test"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|record
+operator|.
+name|containsKey
+argument_list|(
+literal|"exams.marks"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 name|streamer
 operator|=
